[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/test/universal_debug.gd" type="Script" id=1]

[node name="UniversalDebug" type="Node"]
script = ExtResource( 1 )

[node name="SceneContainer" type="Node" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="SceneSelector" type="Panel" parent="UI"]
margin_left = 300.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/SceneSelector"]
margin_left = 20.0
margin_top = 20.0
margin_right = 380.0
margin_bottom = 50.0
text = "Select a scene to debug:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="UI/SceneSelector"]
margin_left = 50.0
margin_top = 60.0
margin_right = 350.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="Button" parent="UI/SceneSelector"]
margin_left = 150.0
margin_top = 120.0
margin_right = 250.0
margin_bottom = 150.0
text = "Load Scene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneName" type="Label" parent="UI"]
visible = false
margin_left = 20.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 40.0
text = "Current Scene: none"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UI"]
visible = false
margin_left = 20.0
margin_top = 50.0
margin_right = 120.0
margin_bottom = 80.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="UI"]
margin_left = 20.0
margin_bottom = 14.0
margin_right = 500.0
margin_bottom = 200.0
text = "Universal Debug Mode
===================
F1: Show help for debug tools
F3: Toggle debug overlay
Press 1-5 to switch polygon editing modes
H: Show polygon editor controls
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]